# Perrypicksv4

./: .gitignore  .market_tracking.heartbeat  .maximus.heartbeat  .perrypicks.heartbeat  CHANGES_LOG.md  CLAUDE.md  CONTEXT_REFERENCE_MASTER.json  DUPLICATE_INSTANCE_INCIDENT_REPORT.md  ODDS_API_ALERT_REVIEW.md  ODDS_API_DOWNTIME_INCIDENT.md  RELIABILITY_IMPROVEMENTS.md  REPORT_CARD_BUG_FIX.md  Start PerryPicks.command  Stop PerryPicks.command  TEAM_TOTAL_BUG_FIX.md  automation_audit_minimal.py  backtest_halftime_20260123.py  backtest_refined_halftime.py  fix_duplicate_instances.py  pyproject.toml  requirements.txt  run_automation.py  run_market_likelihood.py  run_market_tracking.py  run_market_tracking.py.bak_allbets_20260301_212011  run_market_tracking.py.bak_bundle_20260301_210209  run_market_tracking.py.bak_dbidemp_20260301_200824  run_market_tracking.py.bak_dividers_20260301_211323  run_market_tracking.py.bak_dropmarketnote_20260301_210647  run_market_tracking.py.bak_fav_time_20260301_204244  run_market_tracking.py.bak_finalcatchup_20260301_212939  run_market_tracking.py.bak_hb_20260301_213659  run_market_tracking.py.bak_humanize_20260301_204846  run_market_tracking.py.bak_layout_20260301_210922  run_market_tracking.py.bak_movevis_20260301_203934  run_market_tracking.py.bak_postcap_20260301_213311  run_market_tracking.py.bak_sqlitehard_20260301_202218  run_market_tracking.py.bak_trendpoints_20260301_201820  run_maximus_pregame.py  run_maximus_pregame.py.bak_hb_20260301_214040  (+16 more)
Reptar/: .gitignore  README.md  pyproject.toml
Reptar/artifacts/: FEATURE_SCHEMA.json  (+1 more)
(+291 files in other folders)
