[project]
name = "perrypicks"
version = "4.0.0"
description = "NBA Game Prediction System with REPTAR halftime model"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "joblib",
    "pyarrow",
    "nba_api",
    "xgboost",
    "lightgbm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
