[project]
name = "reptar-halftime"
version = "0.1.0"
description = "REPTAR: NBA halftime prediction model (CatBoost)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "joblib>=1.3",
  "catboost>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reptar"]
